--- a/packages/gatsby-theme-docs/package.json
+++ b/packages/gatsby-theme-docs/package.json
@@ -4,6 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@mdx-js/mdx": "^1.6.4",
+    "@mdx-js/react": "^1.6.4",
+    "gatsby-plugin-mdx": "^1.2.12",
+    "gatsby-source-filesystem": "^2.3.8",
     "mkdirp": "^1.0.4"
   }
 }
