--- a/packages/gatsby-theme-docs/package.json
+++ b/packages/gatsby-theme-docs/package.json
@@ -10,7 +10,9 @@
     "gatsby-plugin-mdx": "^1.2.12",
     "gatsby-plugin-theme-ui": "^0.3.0",
     "gatsby-source-filesystem": "^2.3.8",
+    "mdx-utils": "^0.2.0",
     "mkdirp": "^1.0.4",
+    "prism-react-renderer": "^1.1.1",
     "theme-ui": "^0.3.1"
   }
 }
