feat(negronis): gatsby-theme-docs added

--- a/sites/negronis/package.json
+++ b/sites/negronis/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "@emotion/core": "^10.0.28",
+    "@jlengstorf/gatsby-theme-events": "^1.0.1",
     "@mdx-js/react": "^1.6.5",
     "@theme-ui/presets": "^0.3.0",
     "gatsby": "^2.15.28",
     "gatsby-image": "^2.4.5",
     "gatsby-plugin-theme-ui": "^0.3.0",
     "gatsby-source-filesystem": "^2.3.8",
+    "gatsby-theme-docs": "*",
     "gatsby-transformer-cloudinary": "^0.3.5",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
